syntax = "proto3";
package service.grpc;


option java_package = "com.proto.service";
option java_multiple_files = true;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Message{
  string message = 1;
  string user_name = 2;
}
message MessageRequest{
  Message message = 1;
}

message MessageResponse{
  Message message = 1;
  int64 timestamp = 2;
}

message ReadMessageRequest{

}